--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.13.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "open": "^10.2.0",
